Started with locale option

--- a/alire.toml
+++ b/alire.toml
@@ -1,5 +1,5 @@
 name = "tuhrthul_kau"
-description = "Shiny new project"
+description = "A Tuhrthul Kau Game"
 version = "0.1.0-dev"
 
 authors = ["Tania Hagn"]
